// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <PrimeraApp/> should show <PrimeraApp /> correctly 1`] = `
<Fragment>
  <h1>
    Hola Mundo
  </h1>
  <p>
    Bienvenido
  </p>
</Fragment>
`;

exports[`Pruebas en <PrimeraApp/> should show subtitutle send thorugh props 1`] = `
<Fragment>
  <h1>
    Hola Mundo
  </h1>
  <p>
    Prueba de Subtitulo
  </p>
</Fragment>
`;
